--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .DS_Store
 *.xcuserstate
 EssentialFeed.xcodeproj/project.xcworkspace/xcuserdata/teddybegh.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcbkptlist
