--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ os: osx
 osx_image: xcode14.2
 language: swift
 script: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_macOS" CODE_SIGN_IDENTITY="" CODE_SIGN_REQUIRED=NO -sdk macosx -destination "platform=macOS" ONLY_ACTIVE_ARCH=YES
-script: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_iOS" CODE_SIGN_IDENTITY="" CODE_SIGN_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator" ONLY_ACTIVE_ARCH=YES
+script: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_iOS" CODE_SIGN_IDENTITY="" CODE_SIGN_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 14" ONLY_ACTIVE_ARCH=YES ONLY_ACTIVE_ARCH=YES
