--- a/EssentialFeed.xcodeproj/xcshareddata/xcschemes/EssentialFeediOS.xcscheme
+++ b/EssentialFeed.xcodeproj/xcshareddata/xcschemes/EssentialFeediOS.xcscheme
@@ -14,8 +14,8 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "AB71F4052B373D5400DE2C25"
-               BuildableName = "EssentialFeediOS.app"
+               BlueprintIdentifier = "ABE696CA2B51C0EF00CCAD4E"
+               BuildableName = "EssentialFeediOS.framework"
                BlueprintName = "EssentialFeediOS"
                ReferencedContainer = "container:EssentialFeed.xcodeproj">
             </BuildableReference>
@@ -39,7 +39,7 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "AB71F41A2B373D5600DE2C25"
+               BlueprintIdentifier = "ABE696D12B51C0EF00CCAD4E"
                BuildableName = "EssentialFeediOSTests.xctest"
                BlueprintName = "EssentialFeediOSTests"
                ReferencedContainer = "container:EssentialFeed.xcodeproj">
@@ -53,6 +53,17 @@
                BlueprintIdentifier = "AB71F4242B373D5700DE2C25"
                BuildableName = "EssentialFeediOSUITests.xctest"
                BlueprintName = "EssentialFeediOSUITests"
+               ReferencedContainer = "container:EssentialFeed.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AB2E1C752B51864D0068D213"
+               BuildableName = "EssentialFeedIOSTests.xctest"
+               BlueprintName = "EssentialFeedIOSTests"
                ReferencedContainer = "container:EssentialFeed.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -72,8 +83,8 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "AB71F4052B373D5400DE2C25"
-            BuildableName = "EssentialFeediOS.app"
+            BlueprintIdentifier = "ABE696CA2B51C0EF00CCAD4E"
+            BuildableName = "EssentialFeediOS.framework"
             BlueprintName = "EssentialFeediOS"
             ReferencedContainer = "container:EssentialFeed.xcodeproj">
          </BuildableReference>
@@ -89,8 +100,8 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "AB71F4052B373D5400DE2C25"
-            BuildableName = "EssentialFeediOS.app"
+            BlueprintIdentifier = "ABE696CA2B51C0EF00CCAD4E"
+            BuildableName = "EssentialFeediOS.framework"
             BlueprintName = "EssentialFeediOS"
             ReferencedContainer = "container:EssentialFeed.xcodeproj">
          </BuildableReference>
